# rusty-addon

./: Cargo.toml
assets/: for_all_mankind_19_1_2024.json  kimetsu_19_1_2024.json
src/: constant.rs  lib.rs  main.rs  manifest_ext.rs  resources.rs  routes.rs
src/routes/: error_handling.rs
