[package]
name = "rusty-addon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers", "tracing", "macros"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "tracing"] }
tower-http = { version = "0.4", features = ["cors"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

stremio-core = { version = "0.1", git = "https://github.com/Stremio/stremio-core", branch = "development" }

semver = "1.0"
once_cell = "1.18"

serde_json = "1"
serde = { version = "1", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }


anyhow = "1"